# tachyon

./: Cargo.toml  README.md  justfile
.github/workflows/: book.yml
book/: README.md  book.toml  custom.css  macros.txt
book/src/: SUMMARY.md  aggregation.md  authorization.md  bundle.md  domain-separators.md  introduction.md  keys.md  notes.md  nullifier-derivation.md  tachygrams.md
book/src/network_roles/: overview.md
book/src/shielded_protocol/: background_orchard.md
crates/mock_ragu/: Cargo.toml  README.md
crates/mock_ragu/src/: accumulator.rs  application.rs  error.rs  hash.rs  header.rs  lib.rs  polynomial.rs  proof.rs  step.rs  tests.rs
crates/tachyon/: Cargo.toml
crates/tachyon/src/: action.rs  bundle.rs  constants.rs  custody.rs  entropy.rs  lib.rs  note.rs  proof.rs  serde_helpers.rs  stamp.rs  value.rs  witness.rs
crates/tachyon/src/keys/: custody.rs  delegated.rs  ggm.rs  mod.rs  note.rs  private.rs  proof.rs  public.rs
crates/tachyon/src/primitives/: action_digest.rs  anchor.rs  epoch.rs  mod.rs  multiset.rs  poseidon.rs  tachygram.rs  tachygram_digest.rs
crates/tachyon/src/stamp/: mod.rs  proof.rs
