[package]
categories = [
    "cryptography::cryptocurrencies",
]
description = """
BLAKE2b-based mock of the Ragu PCD proof system for testing.
"""
keywords = [
    "zcash",
    "tachyon",
    "mock",
]
name = "mock_ragu"
version = "0.0.0"

edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
blake2b_simd = "1.0"
ff = "0.13"
pasta_curves = "0.5.1"
rand = "0.8"

[lib]
bench = false
