[package]
categories = [
    "cryptography::cryptocurrencies",
]
description = """
BLAKE2b-based mock of the Ragu PCD proof system for testing.
"""
keywords = [
    "zcash",
    "tachyon",
    "mock",
]
name = "mock_ragu"
readme = "README.md"
repository = "https://github.com/tachyon-zcash/tachyon"
version = "0.0.0"

edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = [
    "std",
]
std = [
    "blake2b_simd/std",
    "rand_core/std",
]

[dependencies]
blake2b_simd = { version = "1.0", default-features = false }
ff = "0.13"
lazy_static = { version = "1", default-features = false, features = [
    "spin_no_std",
] }
pasta_curves = "0.5.1"
rand_core = { version = "0.6", default-features = false }

[dev-dependencies]
rand = "0.8"

[lib]
bench = false
