[package]
categories = [
    "cryptography::cryptocurrencies",
]
description = """
WIP
"""
keywords = [
    "zcash",
    "tachyon",
]
name = "zcash_tachyon"
version = "0.0.0"

documentation = "https://docs.rs/zcash_tachyon"
readme = "README.md"
repository = "https://github.com/tachyon-zcash/tachyon"

edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = [
]
serde = [
    "dep:serde",
    "reddsa/serde",
]

[lints]
workspace = true

[dependencies]
bitvec = "1.0.1"
blake2b_simd = "1.0"
ff = "0.13"
group = "0.13"
halo2_poseidon = "0.1"
pasta_curves = "0.5.1"
proptest = "1"
rand = "0.8"
reddsa = "0.5.1"
serde = { version = "1.0", features = [
    "derive",
], optional = true }

[lib]
bench = false
