[package]
categories = [
    "cryptography::cryptocurrencies",
]
description = """
WIP
"""
keywords = [
    "zcash",
    "tachyon",
]
name = "zcash_tachyon"
version = "0.0.0"

documentation = "https://docs.rs/zcash_tachyon"
readme = "README.md"
repository = "https://github.com/tachyon-zcash/tachyon"

edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = [
    "std",
]
serde = [
    "dep:serde",
    "reddsa/serde",
]
std = [
    "blake2b_simd/std",
    "mock_ragu/std",
    "rand_core/std",
    "reddsa/std",
]

[lints]
workspace = true

[dependencies]
blake2b_simd = { version = "1.0", default-features = false }
ff = "0.13"
group = "0.13"
halo2_poseidon = "0.1"
lazy_static = { version = "1", default-features = false, features = [
    "spin_no_std",
] }
mock_ragu = { path = "../mock_ragu", default-features = false }
pasta_curves = "0.5.1"
rand_core = { version = "0.6", default-features = false }
reddsa = { version = "0.5.1", default-features = false }
serde = { version = "1.0", features = [
    "derive",
], optional = true }

[dev-dependencies]
rand = "0.8"

[lib]
bench = false
